# JamEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile  pspBuild.sh
Preprocessing/: BinaryFiles  MakeColors  Makefile
Preprocessing/src/: BinaryHelper.hpp  FILE_DIRECTORIES.hpp  MapParser.cpp  MapParser.hpp  Parser.cpp
assets/Textures/: MenuStart.png.bak
src/: ASSETS_IDs.hpp  AnimatedSprite.cpp  AnimatedSprite.hpp  Animation.cpp  Animation.hpp  AssetManager.cpp  AssetManager.hpp  BinaryParser.cpp  BinaryParser.hpp  EventManager.cpp  EventManager.hpp  Game.cpp  Game.hpp  Handler.cpp  Handler.hpp  Interpolable_Object.cpp  Interpolable_Object.hpp  JamEngine.cpp  JamEngine.hpp  Obstacle.cpp  Obstacle.hpp  Player.cpp  Player.hpp  PopUp.cpp  PopUp.hpp  Score.cpp  Score.hpp  Sprite.cpp  Sprite.hpp  Tilemap.cpp  Tilemap.hpp  Zone.cpp  Zone.hpp  enumObstacleDir.hpp  main.cpp  sGame.cpp  sGame.hpp  sMenu.cpp  sMenu.hpp  sScore.cpp  (+1 more)
src/engineModules/: AnimatedSprite.cpp  AnimatedSprite.hpp  Animation.cpp  Animation.hpp  AssetManager.cpp  AssetManager.hpp  Drawable.hpp  EventManager.cpp  EventManager.hpp  JamEngine.cpp  JamEngine.hpp  Sprite.cpp  Sprite.hpp  State.hpp  StateMachine.cpp  StateMachine.hpp  Tilemap.cpp  Tilemap.hpp  audio.c  eAnimator.hpp  eClock.cpp  eClock.hpp  eFont.cpp  eFont.hpp  eMusic.cpp  eMusic.hpp  eText.cpp  eText.hpp  eTime.cpp  eTime.hpp  eView.cpp  eView.hpp
src/math/: Vector2.hpp
